Implement and modernize RBZ licensing workflow